add tests and patch route to products
